--- a/src/client/css/index.css
+++ b/src/client/css/index.css
@@ -1,18 +1,25 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-body {
-    margin: 0;
-    line-height: 1.45;
-    font-size: 1.125rem;
-}
+@layer components {
+  .homepage-lede {
+    @apply font-roslindale-2 text-4xl sm:text-5xl md:text-6xl;
+    line-height: 1.25 !important;
+    font-variation-settings: 'wdth' 94;
+  
+    a {
+      text-decoration: underline;
+      text-decoration-thickness: 2px;
+    }  
+  }
 
-body {
-    max-width: 65ch;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1rem;
+  .home-cols {
+    @apply flex flex-wrap w-full-inset mx-auto gap-12;
+    
+    > * {
+      flex: 1;
+      width: min(22rem, 50vw);
+    }
+  }
 }
