--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -7,7 +7,7 @@
   <nav>
     <ul class="flex flex-wrap gap-x-4 gap-y-2">
     {% for menuItem in site.menu %}
-    <li><a href="{{ menuItem.url }}" class="flex items-center gap-2 {% if active_nav === menuItem.identifier %}text-ink-bold font-medium{% else %}text-ink-medium {% endif %}">
+    <li><a href="{{ menuItem.url }}" class="flex items-center gap-2 {% if active_nav === menuItem.identifier %}text-accent font-medium{% else %}text-ink-medium {% endif %}">
       <i class="fal fa-{{ menuItem.icon }}"></i>
       <span>{{ menuItem.text }}</span>
     </a></li>
