--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -9,7 +9,7 @@ layout: layouts/base.njk
   <hr class="w-full-inset my-16 border-2 border-ink-medium">
 
   <section class="home home_section w-full-inset">
-    <h2 class="dd-heading-2 font-sans-display text-3xl uppercase">Latest articles</h2>
+    <h2 class="dd-heading-2 font-sans-display text-2xl sm:text-3xl uppercase">Latest articles</h2>
 
   </section>
 </main>
