--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-surface">
 {% include "head.njk" %}
 <body>
-{% include 'header.njk' %}
-<main>
-    {{ content | safe }}
-</main>
-<footer>
-</footer>
+  <div class="bg-surface text-ink min-h-screen dd-page">
+  {% include 'header.njk' %}
+  
+  {{ content | safe }}
+  
+  <footer class="py-16 flex flex-col items-center text-ink-medium">
+    <div class="w-full-inset max-w-2xl text-center text-sm">
+      <p><b class="inline-block px-1 text-accent"><i class="far fa-rss"></i> RSS</b> Subscribe to articles, notes, or everything</p>
+      <p>&copy; 2021 David Demaree</p>
+    </div>
+  </footer>
+  
+  </div>
 {% include "footer-scripts.njk" %}
 </body>
 </html>
