--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,9 +8,16 @@
   {{ content | safe }}
   
   <footer class="py-16 flex flex-col items-center text-ink-medium">
-    <div class="w-full-inset max-w-2xl text-center text-sm">
-      <p><b class="inline-block px-1 text-accent"><i class="far fa-rss"></i> RSS</b> Subscribe to articles, notes, or everything</p>
-      <p>&copy; 2021 David Demaree</p>
+    <hr class="w-full-inset border-2 border-ink-medium mb-8">
+    <div class="w-full-inset text-center text-sm grid gap-2 grid-cols-1 sm:grid-cols-2">
+      <div class="sm:text-left space-y-1">
+        <p><b class="inline-block text-accent"><i class="fas fa-rss"></i></b> Subscribe to articles, notes, or everything</p>
+        <p>Follow me on <a href="https://twitter.com/ddemaree" class="font-medium"><i class="fab fa-twitter fa-sm"></i> <span class="underline">Twitter</span></a></p>
+      </div>
+      <div class="sm:text-right space-y-1">
+        <p>&ldquo;Have courage, and be kind.&rdquo;</p>
+        <p>&copy; 2021 <a href="/" class="font-medium underline text-ink">David Demaree</a></p>
+      </div>
     </div>
   </footer>
   
