Moar blog posts

--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  {# <link rel="icon" href="{% iconAsset 'static/dd-logo-square.svg', 'png-180' %}" type="image/png"> #}
+  <link rel="icon" href="{% iconAsset 'static/dd-logo-square.svg', 'png-180' %}" type="image/png">
   <link rel="icon" href="/dynamic-icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="{% iconAsset 'static/dd-logo-square.svg', 'png-180' %}"><!-- 180×180 -->
   <title>{{ metadata.title or title | default("David Demaree's web site") }}</title>
