Add notes section backed by WP data

--- a/src/client/css/components/index.css
+++ b/src/client/css/components/index.css
@@ -129,6 +129,10 @@
     @apply text-lg;
   }
 
+  .dd-prose > .dd-prose {
+    @apply w-full max-w-full !important;
+  }
+
   .dd-prose > * {
     @apply mx-auto text-ink;
 
