--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -6,12 +6,11 @@
   <span class="mx-8 flex-1 hidden sm:block"></span>
   <nav>
     <ul class="flex flex-wrap gap-x-4 gap-y-2">
-    {% for menuItem in site.menu %}
-    <li><a href="{{ menuItem.url }}" class="flex items-center gap-2 {% if active_nav === menuItem.identifier %}text-accent font-medium{% else %}text-ink-medium {% endif %}">
-      <i class="fal fa-{{ menuItem.icon }}"></i>
-      <span>{{ menuItem.text }}</span>
-    </a></li>
-    {% endfor %}
+    {% for menuItem in site.menu %}{% if !menuItem.hidden %}<li>
+      <a href="{{ menuItem.url }}" class="flex items-center gap-2 {% if active_nav === menuItem.identifier %}text-accent font-medium{% else %}text-ink-medium {% endif %}">
+        {% if menuItem.icon %}<i class="fal fa-{{ menuItem.icon }}"></i>{% endif %}
+        <span>{{ menuItem.text }}</span>
+      </a></li>{% endif %}{% endfor %}
     </ul>
   </nav>
 </header>
