--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -16,7 +16,11 @@ gridwrap: true
     <hr class="w-full-inset border-2 border-ink-light mb-6">
     <div class="w-full-inset text-center text-sm grid gap-2 grid-cols-1 sm:grid-cols-2">
       <div class="sm:text-left space-y-1">
-        <p><b class="inline-block text-accent"><i class="fas fa-rss"></i></b> Subscribe to articles, notes, or everything</p>
+        <p>
+          <a href="/feed.xml">
+            <b class="inline-block text-accent"><i class="fas fa-rss"></i></b> Subscribe to RSS feed
+          </a>
+        </p>
         <p>Follow me on <a href="https://twitter.com/ddemaree" class="font-medium"><i class="fab fa-twitter fa-sm"></i> <span class="underline">Twitter</span></a></p>
       </div>
       <div class="sm:text-right space-y-1">
