--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -6,6 +6,9 @@
   <link rel="icon" href="{% iconAsset 'static/dd-logo-square.svg', 'png-180' %}" type="image/png">
   <link rel="icon" href="/dynamic-icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="{% iconAsset 'static/dd-logo-square.svg', 'png-180' %}"><!-- 180×180 -->
+  <link rel="alternate" type="application/atom+xml" 
+  title="RSS Feed for David Demaree's site" 
+  href="/feed.xml" />
   <title>{{ metadata.title or title | default("David Demaree's web site") }}</title>
   <script async src="https://kit.fontawesome.com/f0afb61fe2.js" crossorigin="anonymous"></script>
   <script src="https://cdn.usefathom.com/script.js" data-site="TOFIAIKB" data-included-domains="demaree.me,demaree.space" defer></script>
