--- a/src/_includes/pageTitle.njk
+++ b/src/_includes/pageTitle.njk
@@ -1,7 +1,9 @@
+{% set theTitle = metadata.title or title | default("DD") %}
+
 {% if override_title %}
 <title>{{ override_title }}</title>
 {% elseif metadata.title or title %}
 <title>{{ metadata.title or title }} — David Demaree's web site</title>
 {% else %}
-<title>David Demaree's web site</title>
+<title>{{ theTitle }}</title>
 {% endif %}
