--- a/src/feeds/all-atom.njk
+++ b/src/feeds/all-atom.njk
@@ -27,7 +27,7 @@
     <email>{{ metadata.author.email }}</email>
   </author>
   {%- for post in collections.articles | reverse %}
-  {% set absolutePostUrl %}{{ post.url | url | absoluteUrl(metadata.url) }}{% endset %}
+  {% set absolutePostUrl %}{{ post.data.postUrl | url | absoluteUrl(metadata.url) }}{% endset %}
   <entry>
     <title>{{ post.data.title }}</title>
     <link href="{{ absolutePostUrl }}"/>
