Add automatic social images

--- a/src/_includes/seo.njk
+++ b/src/_includes/seo.njk
@@ -17,5 +17,8 @@
 <meta property="og:title" name="twitter:title" content="{{ seoTitle }}" />
 
 {# og:image / twitter:image #}
+<meta property="og:image" content="https://res.cloudinary.com/demaree/image/fetch/w_800/https://dd-social-images-ddemaree.vercel.app/img/{{ title | urlencode }}" />
+<meta name="twitter:image" content="https://res.cloudinary.com/demaree/image/fetch/w_800/https://dd-social-images-ddemaree.vercel.app/img/{{ title | urlencode }}" />
+
 {# og:image:alt #}
 
