Trying large image Twitter card

--- a/src/_includes/seo.njk
+++ b/src/_includes/seo.njk
@@ -3,7 +3,7 @@
 <meta property="og:type" content="website" />
 <meta name="twitter:site" content="@ddemaree" />
 <meta name="twitter:creator" content="@ddemaree" />
-<meta name="twitter:card" content="summary" />
+<meta name="twitter:card" content="summary_large_image" />
 
 <meta name="twitter:url" content="{{ page.url | absoluteUrl('https://demaree.space/') }}" />
 <meta property="og:url" content="{{ page.url | absoluteUrl('https://demaree.space/') }}" />
