--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -16,12 +16,13 @@
 
   <script async src="https://kit.fontawesome.com/f0afb61fe2.js" crossorigin="anonymous"></script>
   <script src="https://cdn.usefathom.com/script.js" data-site="TOFIAIKB" data-included-domains="demaree.me,demaree.space" defer></script>
-  {% for set in site.fontSets %}
-  <link data-dd-fontset="{{ set }}" rel="stylesheet" href="https://cdn.demaree.net/fonts/{{ set }}/index.css" type="text/css" />
-  {% endfor %}
+  <link rel="preconnect" href="https://cdn.demaree.net">
+  <style type="text/css">
+  {% for set in site.fontSets %}{% webfontStyle set | safe %}{% endfor %}
+  </style>
   {% if build.env == "production" %}
-      {# Add any CSS from the main script #}
-      {% viteLinkStylesheetTags "src/client/main.js" %}
-      {% viteLinkModulePreloadTags "src/client/main.js" %}
+    {# Add any CSS from the main script #}
+    {% viteLinkStylesheetTags "src/client/main.js" %}
+    {% viteLinkModulePreloadTags "src/client/main.js" %}
   {% endif %}
 </head>
