--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,85 +1,24 @@
 ---
-// Component Imports
 import BaseHead from '../components/BaseHead.astro';
-import BlogHeader from '../components/BlogHeader.astro';
-import BlogPostPreview from '../components/BlogPostPreview.astro';
+import ReactIcon from '../components/FontAwesomeIcon.jsx'\
+import { Markdown } from 'astro/components'
 
-import ReactIcon from '../components/FontAwesomeIcon.jsx'
-
-interface MarkdownFrontmatter {
-  publishDate: number;
-}
-
-// Component Script:
-// You can write any JavaScript/TypeScript that you'd like here.
-// It will run during the build, but never in the browser.
-// All variables are available to use in the HTML template below.
 let title = 'Example Blog';
 let description = 'The perfect starter for your perfect blog.';
 let permalink = 'https://example.com/';
-
-// Data Fetching: List all Markdown posts in the repo.
-
-let allPosts = await Astro.fetchContent('./p/**/*.md');
-allPosts = allPosts.sort((a, b) => new Date(b.publishDate).valueOf() - new Date(a.publishDate).valueOf());
-
-// Full Astro Component Syntax:
-// https://docs.astro.build/core-concepts/astro-components/
 ---
-<html lang="en">
+<html lang="en" class="bg-white dark:bg-gray-900 text-gray-800 dark:text-gray-100">
   <head>
     <BaseHead title={title} description={description} permalink={permalink} />
-    <link rel="stylesheet" href="/blog.css" />
-
-    <style>
-      header {
-        width: 100%;
-        height: 100%;
-        background-color: var(--theme-bg-offset);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .content {
-        margin-top: 4rem;
-        margin-bottom: 8rem;
-      }
-
-      .content :global(main > * + *) {
-        margin-top: 1rem;
-      }
-
-      .intro {
-        padding-bottom: 4rem;
-        margin-bottom: 2rem;
-        border-bottom: 4px solid var(--theme-divider);
-      }
-
-      .intro > * {
-        margin: 0;
-      }
-
-      .latest {
-        font-size: 2.5rem;
-        font-weight: 700;
-      }
-    </style>
   </head>
-
   <body>
-    <ReactIcon icon={["fas", "coffee"]} />
-    <BlogHeader />
-    <div class="wrapper">
-      <main class="content">
-        <section class="intro">
-          <h1 class="latest">{title}</h1>
-          <p>{description}</p>
-        </section>
-        <section aria-label="Blog post list">
-          {allPosts.map(p => <BlogPostPreview post={p} />)}
-        </section>
-      </main>
+    <div class="py-12 w-full-inset mx-auto max-w-3xl">
+      <h1 class="text-4xl font-sans font-semibold">
+        <ReactIcon icon="coffee" />
+        A home page</h1>
+      <Markdown>
+        # This is a home page too <ReactIcon icon="coffee" />
+      </Markdown>
     </div>
   </body>
 </html>
