--- a/src/pages/p/[wpSlug].astro
+++ b/src/pages/p/[wpSlug].astro
@@ -1,7 +1,7 @@
 ---
 // import Layout from '../../components/Layout.astro';
 import BaseHead from '../../components/BaseHead.astro';
-import Prose from '@/components/Prose.astro'
+import Prose from '../../components/Prose.astro'
 
 export async function getStaticPaths() {
   const response = await fetch('https://demaree.blog/wp-json/wp/v2/posts?per_page=100&_fields=id,slug,date_gmt');
