--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,7 @@
 
   .prose-ebony {
     --color-bodytext: theme('colors.gray.200');
-    --color-linktext: theme('colors.red.400');
+    --color-linktext: theme('colors.pink.400');
     --color-boldtext: theme('colors.white');
     --color-captiontext: theme('colors.blue.200');
     --color-line-quotes: theme('colors.gray.700');
