--- a/src/_includes/footer-scripts.njk
+++ b/src/_includes/footer-scripts.njk
@@ -14,6 +14,6 @@
   {% viteLegacyScriptTag "vite/legacy-polyfills" %}
   {% viteLegacyScriptTag "src/client/main-legacy.js" %}
 {% else %}
-  <script type="module" src="http://localhost:3000/@vite/client"></script>
-  <script type="module" src="http://localhost:3000/src/client/main.js"></script>
+  <script type="module" src="/@vite/client"></script>
+  <script type="module" src="/src/client/main.js"></script>
 {% endif %}
