--- a/src/client/css/components/index.css
+++ b/src/client/css/components/index.css
@@ -1,6 +1,6 @@
 @layer components {
   .homepage-lede {
-    @apply font-sans font-medium text-4xl sm:text-5xl md:text-6xl;
+    @apply font-sans font-medium text-4xl;
     line-height: 1.25 !important;
     font-variation-settings: 'wdth' 94;
   
