--- a/src/_includes/footer-scripts.njk
+++ b/src/_includes/footer-scripts.njk
@@ -12,8 +12,8 @@
   {# We must read the production scripts from the Vite manifest. We defer that logic to a custom shortcode #}
   {% viteScriptTag "src/client/main.js" %}
   {% viteLegacyScriptTag "vite/legacy-polyfills" %}
-  {% viteLegacyScriptTag "src/client/main-legacy.js" %}
+  {% viteLegacyScriptTag "assets/main-legacy.js" %}
 {% else %}
   <script type="module" src="/@vite/client"></script>
-  <script type="module" src="/src/client/main.js"></script>
+  <script type="module" src="/assets/main.js"></script>
 {% endif %}
