--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,20 +1,33 @@
 ---
 export interface Props {
   title: string;
-  description: string;
   permalink: string;
+  description?: string;
+  socialImage?: string;
 }
 const { title, description, permalink } = Astro.props;
 ---
 
 <!-- Global Metadata -->
+<script>
+// Set initial dark mode
+const root = document.documentElement;
+const theme = localStorage.getItem('theme');
+if (
+  theme === 'dark' ||
+  (!theme && window.matchMedia('(prefers-color-scheme: dark)').matches)
+) {
+  root.classList.add('dark');
+} else {
+  root.classList.remove('dark');
+}
+</script>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
-<!-- <link rel="icon" type="image/x-icon" href="/favicon.ico" /> -->
 <link rel="icon" type="image/x-icon" href="/dd-icon.svg" />
 
 <link rel="stylesheet" type="text/css" href={Astro.resolve('../styles/global.css')} />
-
+<link rel="preconnect" href="https://res.cloudinary.com" />
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
