--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,25 +1,24 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import BlogHeader from '../components/BlogHeader.astro';
-import BlogPost from '../components/BlogPost.astro';
-
-const {content} = Astro.props;
-const {title, description, publishDate, author, heroImage, permalink, alt} = content;
+import SiteChrome from '../components/SiteChrome.astro'
+import BaseHead from '../components/BaseHead.astro'
+import Prose from '../components/Prose.astro'
+import PostHeader from '../components/PostHeader.astro'
+const { content } = Astro.props;
 ---
-
-<html lang={ content.lang || 'en' }>
+<html>
   <head>
-    <BaseHead title={title} description={description} permalink={permalink} />
-    <link rel="stylesheet" href="/blog.css" />
+    <meta charset="utf-8" />
+    <BaseHead title={content.title} permalink={content.url} />
   </head>
 
   <body>
-    <BlogHeader />
-    <div class="wrapper">
-      <BlogPost title={title} author={author} heroImage={heroImage} publishDate={publishDate} alt={alt}>
+    <SiteChrome>
+      <PostHeader 
+        title={content.title}
+        date={content.date} />
+      <Prose>
         <slot />
-      </BlogPost>
-    </div>
+      </Prose>
+    </SiteChrome>
   </body>
 </html>
-
