--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,144 +1,51 @@
-@import url(https://cdn.demaree.net/fonts/soehne/index.css);
-@import url(https://cdn.demaree.net/fonts/soehne-mono/index.css);
-@import url(https://cdn.demaree.net/fonts/ivar-text/index.css);
+@import '@fortawesome/fontawesome-svg-core/styles.css';
+@import url('https://cdn.demaree.net/fonts/soehne/index.css');
+@import url('https://cdn.demaree.net/fonts/ivar-text/index.css');
+@import url('https://cdn.demaree.net/fonts/soehne-mono/index.css');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  :root {
+    --wp--custom--content-width: theme('maxWidth.content');
+    --wp--custom--wide-width:  theme('maxWidth.wide');
+    --inset-x: clamp(1.5rem,2.7vw,2rem);
+    --header-height: 5rem;
+
+    @screen sm {
+      --header-height: 4rem;
+    }
+  }
+
+  body {
+    @apply theme-light dark:theme-dark bg-surface text-ink;
+    font-family: inherit;
+  }
+}
+
 @layer components {
-  .prose-ivory {
-    --color-bodytext: theme('colors.gray.800');
-    --color-linktext: theme('colors.red.600');
-    --color-boldtext: theme('colors.black');
-    --color-captiontext: theme('colors.gray.500');
-    --color-line-quotes: theme('colors.gray.200');
-    --color-line-rules: theme('colors.gray.300');
-  }
+  .theme-light {
+		--col-surface: theme('colors.white');
+    --col-header: theme('colors.gray.10');
+		--col-ink-base: theme('colors.gray.80');
+		--col-ink-bold: theme('colors.black');
+		--col-ink-medium: theme('colors.gray.60');
+		--col-ink-light: theme('colors.gray.40');
+		--col-primary: theme('colors.red.50');
+	}
 
-  .prose-ebony {
-    --color-bodytext: theme('colors.gray.200');
-    --color-linktext: theme('colors.pink.400');
-    --color-boldtext: theme('colors.white');
-    --color-captiontext: theme('colors.blue.200');
-    --color-line-quotes: theme('colors.gray.700');
-    --color-line-rules: theme('colors.gray.500');
-  }
-
-  .prose {
-    color: var(--color-bodytext);
-
-    a:link {
-      color: var(--color-linktext);
-    }
-
-    figcaption {
-      color: var(--color-captiontext);
-    }
-
-    :where(h1, h2, h3, h4, h5, h6, b, strong) {
-      color: var(--color-boldtext);
-    }
-  }
-
-  /* TYPOGRAPHY */
-  .prose {
-    @apply font-serif;
-    font-size: 1.25rem;
-    line-height: 1.5;
-
-    :where(a:link) {
-      @apply underline;
-    }
-
-    /* TYPOGRAPHY */
-    :where(h1, h2, h3, h4, h5, h6) {
-      @apply font-sans font-semibold;
-    }
-
-    :where(h1) {
-      @apply text-4xl font-medium;
-    }
-
-    :where(h2) {
-      @apply text-3xl font-medium;
-    }
-
-    :where(h3) {
-      @apply text-2xl font-semibold;
-    }
-
-    :where(h4, h5, h6) {
-      @apply text-xl uppercase tracking-widest font-medium;
-    }
-  }
-
-  /* WIDTH & SPACING */
-  :is(.prose > *, .prose > figure) {
-    @apply mx-auto;
-  }
-
-  :is(.prose > * + *, .prose > * + [class^=wp-block]) {
-    @apply mt-6;
-  }
-
-  .prose {
-    > * {
-      @apply mx-auto w-full;
-    }
-
-    > :not(.width-full, .width-wide, .alignfull, .alignwide) {
-      @apply max-w-3xl;
-    }
-
-    > :where(.alignwide, .width-wide) {
-      @apply max-w-5xl;
-    }
-
-    > * img {
-      width: 100%;
-    }
-
-    > :not(hr) + :is(h1, h2, h3, h4, h5, h6) {
-      @apply mt-14 !important;
-    }
-
-    > :is(figure) {
-      @apply pb-6;
-
-      &:not(:first-child) {
-        @apply pt-6;
-      }
-    }
-
-    > :where(ul) {
-      @apply list-disc;
-
-      ul {
-        list-style-type: circle;
-      }
-
-      li {
-        @apply ml-8;
-      }
-    }
-
-    blockquote {
-      border-left: 4px solid var(--color-line-quotes);
-      color: var(--color-captiontext);
-      padding-left: calc(theme('spacing.6') - 4px);
-      padding-right: theme('spacing.6');
-    }
-
-    > hr:not([hidden]) {
-      @apply py-8 border-0 flex items-center justify-center;
-
-      &:before {
-        letter-spacing: 15px;
-        content: '•••';
-        color: var(--color-line-rules);
-        line-height: 1;
-      }
-    }
-  }
+	.theme-dark {
+    --col-surface: lch(12% 8 -88);
+    --col-header: lch(6% 8 -88);
+		--col-ink-base: theme('colors.neutral.100');
+		--col-ink-bold: theme('colors.white');
+		--col-ink-medium: theme('colors.neutral.400');
+		--col-ink-light: theme('colors.gray.60');
+    --col-primary: lch(68% 78 24);
+    --col-primary: lch(68% 90 34);
+		--col-accent: hsl(6deg 82% 58%);
+    --col-buttons: lch(36% 30 -88);
+	}
 }
