--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -5,7 +5,7 @@ import Prose from '../components/Prose.astro'
 import PostHeader from '../components/PostHeader.astro'
 const { content } = Astro.props;
 ---
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <BaseHead title={content.title} permalink={content.url} />
