--- a/themes/demaree-2022/layouts/posts/list.html
+++ b/themes/demaree-2022/layouts/posts/list.html
@@ -9,9 +9,10 @@
 
   {{ range .Paginator.Pages }}
     <article class="posts-archive__item">
-      <a href="{{ .RelPermalink }}">
-        <h2>{{ .Title }}</h2>
-      </a>
+      <h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
+      {{ with .Params.description }}
+      <p class="description">{{ . }}</p>
+      {{ end }}
     </article>
   {{ end }}
 
