Fixed some blocks

--- a/themes/demaree-2022/layouts/posts/single.html
+++ b/themes/demaree-2022/layouts/posts/single.html
@@ -33,4 +33,6 @@
 </nav>
 {{ end }}
 
+<script src="https://cdn.knightlab.com/libs/juxtapose/latest/js/juxtapose.min.js"></script>
+<link rel="stylesheet" href="https://cdn.knightlab.com/libs/juxtapose/latest/css/juxtapose.css">
 {{ end }}
