--- a/themes/demaree-2022/assets/css/main.css
+++ b/themes/demaree-2022/assets/css/main.css
@@ -1001,7 +1001,8 @@ body {
   }
 }
 
-.dd-block-gallery {
+.dd-block-gallery,
+.wp-block-gallery {
   ul, li {
     margin: unset;
   }
@@ -1010,6 +1011,11 @@ body {
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  li > figure {
+    width: 100%;
+    height: 100%;
   }
 
   img {
