--- a/themes/demaree-2022/layouts/partials/head.html
+++ b/themes/demaree-2022/layouts/partials/head.html
@@ -1,4 +1,6 @@
+
 <meta charset="utf-8" />
+<link rel="icon" href="/icon.svg" type="image/svg+xml" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="preconnect" href="https://res.cloudinary.com" />
 <style type="text/css">
