--- a/themes/demaree-2022/assets/css/main.css
+++ b/themes/demaree-2022/assets/css/main.css
@@ -822,7 +822,7 @@ body {
 }
 
 .content-wrapper blockquote {
-  border-inline-start: 0.25rem solid var(--col-ink-light);
+  border-inline-start: 0.25rem solid var(--col--ink-light);
   padding-inline-start: 1.5rem;
 }
 
@@ -864,8 +864,8 @@ body {
   }
 }
 
-.wp-block-separator {
-  margin-block: 4rem;
+.content-wrapper > hr, .wp-block-separator {
+  margin-block: 5rem;
   border-color: var(--col--ink-light);
 
   &:not(.is-style-wide):not(.is-style-dots) {
